# project_xiaozhi

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/Aud/: xiaozhi_audio.c  xiaozhi_audio.h  xiaozhi_decoder.h  xiaozhi_deocoder.c  xiaozhi_encoder.c  xiaozhi_encoder.h  xiaozhi_sr.c  xiaozhi_sr.h
main/Button/: xiaozhi_button.c  xiaozhi_button.h
main/http/: xiaozhi_http.c  xiaozhi_http.h  xiaozhi_ws.c  xiaozhi_ws.h
main/lvgl/: xiaozhi_lvgl.c  xiaozhi_lvgl.h
main/wifi_sta/: xiaozhi_wifi.c  xiaozhi_wifi.h
main/xiaozhi_data/: xiaozhi_data.c  xiaozhi_data.h
main/xiaozhi_lcd/: xiaozhi_lcd.c  xiaozhi_lcd.h
